# SoSe25_PUE_Abgabe

./: .gitignore  ekgdata.py  main.py  person.py  pyproject.toml
