[project]
name = "SoSe25_PUE_Abgabe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lilly313", email = "fl1620@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "plotly>=6.1.2", "pillow>=11.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
